fix: right position of scrollbar

--- a/src/css/web-player.less
+++ b/src/css/web-player.less
@@ -366,17 +366,12 @@
 
   .ps-container > .ps-scrollbar-y-rail {
     z-index: 10;
+    right: 0 !important;
     display: block;
     opacity: .6;
 
     & > .ps-scrollbar-y {
       width: 5px;
-    }
-  }
-
-  .@{class-prefix}-wap-fileList {
-    .ps-container > .ps-scrollbar-y-rail {
-      right: -5px !important;
     }
   }
 }
